--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "4.6.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/sqlite": "^4.7.0",
+    "@ionic-native/sqlite-porter": "^4.7.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic-native/toast": "^4.7.0",
     "@ionic/pro": "1.0.20",
@@ -40,6 +41,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -55,7 +57,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {}
     },
     "platforms": [
       "android"
