--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "5.2.9",
     "@angular/common": "5.2.9",
     "@angular/compiler": "5.2.9",
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/sqlite": "^4.7.0",
     "@ionic-native/sqlite-porter": "^4.7.0",
@@ -37,8 +39,10 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.6.2",
     "cordova-sqlite-storage": "^2.3.0",
+    "dragula": "^3.7.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ng2-dragula": "^1.5.0",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
@@ -46,6 +50,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
+    "@types/googlemaps": "^3.30.8",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
